# translators-ui

./: .env  .firebaserc  .gitignore  README.md  firebase.json  gunicorn.conf.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
python/: exceptions.py  translators.py
python/models/: mbert_large_50.py  mbert_large_cc25.py  opus_mt_mul_en.py  t5_small.py
python/translator/: manager.py  translator.py
scripts/: helpers.py
scripts/models/: mbert_large_cc25.py  opus_mt_ko_en.py  opus_mt_tc_big_en_ko.py
src/: App.css  App.tsx  index.tsx
src/apis/: translate.ts
src/common/: config.ts  constants.ts
src/components/: InputTextarea.tsx  LanguageSelector.tsx  SwitchTranslateType.tsx
src/hooks/: useTranslate.tsx
src/screens/: Main.tsx  MainPage.tsx
