[tool.poetry]
name = "huggingface-translators"
version = "0.1.0"
description = ""
authors = ["Kei Shimizu <suns.manage.k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.23.1"
fastapi = "^0.85.2"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
